...
        android:text="view schedule"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTable" />

    <Button
        android:id="@+id/searchCourse"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_marginTop="8dp"
        android:text="Search Course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drop" />

    <Button
...
